# ChangeLog for net-irc/quassel
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/quassel/ChangeLog,v 1.57 2009/09/05 21:34:35 maekke Exp $

  05 Sep 2009; Markus Meier <maekke@gentoo.org> quassel-0.4.3.ebuild:
  amd64/x86 stable, bug #249488

  04 Sep 2009; Pielmeier Daniel <billie@gentoo.org> metadata.xml:
  Add upstream author to metadata.

  04 Sep 2009; Pielmeier Daniel <billie@gentoo.org> -quassel-0.4.1.ebuild,
  quassel-0.5_rc1.ebuild, +files/quassel-0.5_rc1-identity.cpp.patch:
  Fix building with USE="-ssl" bug #283303. Remove old.

*quassel-0.4.3-r50 (26 Aug 2009)

  26 Aug 2009; Tomáš Chvátal <scarabeus@gentoo.org> quassel-0.4.3.ebuild,
  +quassel-0.4.3-r50.ebuild:
  Add 0.4.3-r50 which has kde4 optional support and adjust 0.4.3 to not
  depend on kde4 so it could be stabilised.

*quassel-0.5_rc1 (26 Aug 2009)

  26 Aug 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  +quassel-0.5_rc1.ebuild:
  Add first rc version of upcoming 0.5 series.

*quassel-0.4.3 (26 Aug 2009)

  26 Aug 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -quassel-0.4.0-r1.ebuild, -quassel-0.4.0-r2.ebuild,
  -files/quassel-0.4.0-no-webkit.patch, -quassel-0.4.2.ebuild,
  +quassel-0.4.3.ebuild:
  Version bump. Remove old.

  30 May 2009; Pielmeier Daniel <billie@gentoo.org> metadata.xml:
  Update email in metadata

*quassel-0.4.2 (22 May 2009)

  22 May 2009; Patrick Lauer <patrick@gentoo.org> +quassel-0.4.2.ebuild:
  Bump to 0.4.2

  27 Apr 2009; Tomas Chvatal <scarabeus@gentoo.org> quassel-9999:
  Introduce italian translation for live ebuild. Lovercase local var.

  01 Apr 2009; Patrick Lauer <patrick@gentoo.org> -quassel-0.3.0.3.ebuild,
  -quassel-0.3.1-r2.ebuild, -quassel-0.3.1-r4.ebuild:
  Removing old

*quassel-0.4.1 (31 Mar 2009)

  31 Mar 2009; Patrick Lauer <patrick@gentoo.org> +files/quassel.logrotate,
  +quassel-0.4.1.ebuild, quassel-9999.ebuild:
  Bump to 0.4.1, small improvements to -9999 ebuild. Thanks to Daniel