@@ -1,8 +1,6 @@
 AUX quassel.logrotate 105 RMD160 42bde4a3d8a899971037b1e2d0ddfb5b136f065e SHA1 c4ddd2cebd364c213ed4443e5bf8bd2ae3b17ad9 SHA256 00c32e857d7a4346d09ac057768565692da9cacf41ed37cc7e357b395e033a45
 AUX quasselcore-2.conf 548 RMD160 afc8ee2d5bc8449c51afd46699e7b9796ff77b1f SHA1 e9492c10864df233edda84411f7cf15e1f7f3573 SHA256 973bff9a4dac8e25b6a7b8dc8355f763c65e31f070b1fc5904f6325045ad3cb5
 AUX quasselcore-2.init 1627 RMD160 fc0885dc6a2295ad1dcb49aefc1adfd184388fb2 SHA1 2629a3019913b1c685406fc88ead655e10bed943 SHA256 318e85a896fc2672651fa270dd98bfb664c0cb20cc8ae34c18363dbef36d820b
-DIST quassel-0.4.2.tar.bz2 2997205 RMD160 d03f1b7d97d20e4c6f285e0c74ab354073c7f2e8 SHA1 7765f6318498b1607672a3f0e73ef6267be68a8e SHA256 60197b435c44d2c5fb5d07d7d3ece65b4f1162b4bcd9178af16fb0789dc0bbe9
-EBUILD quassel-0.4.2.ebuild 3656 RMD160 72528bc71d39113f51d6a8f6eb75a69a5c123f4d SHA1 b44740ee359b666c514c97b45af464e71e4509aa SHA256 792c35b20299ad6d40b081669c1f119c4b2b55467faa1b9e434794f1158cafa5
-EBUILD quassel-9999.ebuild 3172 RMD160 33f0cd10c261a6d45b3b29f2e2368657a6f1148e SHA1 af7cce51f9958b48636fc09a99cc6bba59cf6f3b SHA256 1e3aa84255f80a7ffc48eb4528ed005f4a4d2681abedfc58cbd302bbef870cf7
-MISC ChangeLog 11028 RMD160 105d67172a7ee08deadb5e09c156af688b6871f5 SHA1 28a951b5902ff5a4cbc666133199da27b972b9c4 SHA256 d97f82ceed9cef6536cb1ffca3e108f12288a328091700b343f5373a5837a0e5
+EBUILD quassel-9999.ebuild 3175 RMD160 3877a29c872b2d3ec0d368f7923393479792d56f SHA1 20e126708b16e86bbe76bc2d0249303d9c053a05 SHA256 23950bdfb88c8ee3208778cc10c82dd74755f5518e3de761b719b88710c97f22
+MISC ChangeLog 11262 RMD160 ebe98f0d94f52edc7a5cc6d21cc8fe75d55edb21 SHA1 5c306222514ee528ce3d131d47f942b53823c4db SHA256 1e3ea098ac8e3b56f86a521e7d54a32e1e66bbbcee25619b1cf87d21bb2ceb78
 MISC metadata.xml 1690 RMD160 b77482ddd5eee3e92733c1df455f11aee3295aba SHA1 6cbff8514dfd42e9d05ed631e084e2b6fa3b46a6 SHA256 3bd4c2880d5f5846c3f69d96709a4bb108b440855994d14dba529e2deb7e615f
